# spewer

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  spewer.py  test_issue_3_implementation.py  tox.ini
.github/workflows/: ci.yml  publish.yml
spewer/: __init__.py  config.py  spewer.py  trace.py
tests/: test_builtin_tracing.py  test_coverage_gaps.py  test_spewer.py  test_trace_new_features.py
